# reed-solomon

./: .gitignore  CMakeLists.txt  README.md  field.cpp  polynomial.hpp  reed-solomon.c  reed-solomon.cpp  reed-solomon.elf  rs-util.hpp  test.sh
include/: galois_field.hpp  polynomial.hpp  reed_solomon.hpp  rs_util.hpp
src/: reed_solomon.cpp
tests/: test.sh
